solution/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-node-app
  namespace: test
spec:
  selector:
    matchLabels:
      name: test-node-backend
  template:
    metadata:
      labels:
        name: test-node-backend
    spec:
      containers:
        - name: backend
          image: docker.io/2021aktest/assess-reduced
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 410m
              memory: 512Mi
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 2000
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - all
              add: ["MKNOD"]
