solution/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assessment
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: node.localdev.me
    http:
      paths:
      - backend:
          service:
            name: test-node-app
            port:
              number: 80
        path: /
        pathType: Prefix
